generator client {
  provider = "prisma-client"
  output   = "../src/generated/prisma"
}

datasource db {
  provider = "sqlite"
}

model User {
  id            String       @id @default(cuid())
  name          String?
  email         String?      @unique
  emailVerified DateTime?
  password      String?
  image         String?
  accounts      Account[]
  createdPools  Pool[]       @relation("PoolCreator")
  memberships   PoolMember[]
  createdAt     DateTime     @default(now())
  updatedAt     DateTime     @updatedAt
}

model Account {
  id                String  @id @default(cuid())
  userId            String
  type              String
  provider          String
  providerAccountId String
  refresh_token     String?
  access_token      String?
  expires_at        Int?
  token_type        String?
  scope             String?
  id_token          String?
  session_state     String?
  user              User    @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([provider, providerAccountId])
  @@index([userId])
}

model Pool {
  id          String        @id @default(cuid())
  name        String
  description String?
  eventType   String?
  status      String        @default("open")
  inviteCode  String        @unique
  creatorId   String
  creator     User          @relation("PoolCreator", fields: [creatorId], references: [id])
  members     PoolMember[]
  categories  BetCategory[]
  createdAt   DateTime      @default(now())
  updatedAt   DateTime      @updatedAt

  @@index([creatorId])
}

model BetCategory {
  id           String        @id @default(cuid())
  name         String
  description  String?
  type         String
  isLocked     Boolean       @default(false)
  deadline     DateTime?
  poolId       String
  pool         Pool          @relation(fields: [poolId], references: [id], onDelete: Cascade)
  scoringRules ScoringRule[]
  createdAt    DateTime      @default(now())
  updatedAt    DateTime      @updatedAt

  @@index([poolId])
}

model ScoringRule {
  id         String      @id @default(cuid())
  name       String
  points     Int
  categoryId String
  category   BetCategory @relation(fields: [categoryId], references: [id], onDelete: Cascade)
  createdAt  DateTime    @default(now())

  @@index([categoryId])
}

model PoolMember {
  id         String   @id @default(cuid())
  role       String   @default("participant")
  totalScore Int      @default(0)
  userId     String
  poolId     String
  user       User     @relation(fields: [userId], references: [id])
  pool       Pool     @relation(fields: [poolId], references: [id], onDelete: Cascade)
  joinedAt   DateTime @default(now())

  @@unique([userId, poolId])
  @@index([userId])
  @@index([poolId])
}
